--- a/index.html
+++ b/index.html
@@ -29,13 +29,39 @@
                 </ul>
             </nav>
             <div class="flex items-center">
-                <a href="#"
-                    class="bg-yellow-400 text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">
-                    Plant a Tree
-                </a>
+                 <button class="bg-[#FACC15] text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">Plant a Tree</button>   
             </div>
         </div>
     </header>
+
+    <section class="w-full bg-[#CFF0DC]">
+        <div class="grid grid-cols-1 sm:grid-cols-3 items-center mx-auto">
+
+            <div class="flex justify-center sm:justify-start">
+                <img src="assets/hero-leaf1.png" alt="hero-leaf1" >
+            </div>
+
+            <div class="text-center">
+                <h1 class="text-[31px] sm:text-[20px] md:text-[24px] lg:text-[31px] 
+                 font-bold text-[#1F2937] leading-snug mb-3">
+                    Plant a Tree, Grow a Future
+                </h1>
+                <p class="text-[12px] sm:text-[14px] md:text-[16px] 
+                text-[#1F2937] leading-relaxed mb-6">
+                    Join our mission to plant 1 million trees and make the Earth greener for future generations.
+                </p>
+                <button class="bg-[#FACC15] text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">Get Involved</button>
+            </div>
+
+            <div class="flex justify-center sm:justify-end">
+                <img src="assets/hero-leaf2.png" alt="hero-leaf2">
+            </div>
+
+        </div>
+    </section>
+
+
+
 
 
 </body>
