--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body class="bg-[#F0FDF4]">
 
     <header class="w-full bg-[#15803D] shadow-sm">
         <div class="flex items-center justify-between px-3 py-2 sm:px-4 sm:py-3 
@@ -29,7 +29,9 @@
                 </ul>
             </nav>
             <div class="flex items-center">
-                 <button class="bg-[#FACC15] text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">Plant a Tree</button>   
+                <button
+                    class="bg-[#FACC15] text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">Plant a
+                    Tree</button>
             </div>
         </div>
     </header>
@@ -38,7 +40,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-3 items-center mx-auto">
 
             <div class="flex justify-center sm:justify-start">
-                <img src="assets/hero-leaf1.png" alt="hero-leaf1" >
+                <img src="assets/hero-leaf1.png" alt="hero-leaf1">
             </div>
 
             <div class="text-center">
@@ -50,13 +52,138 @@
                 text-[#1F2937] leading-relaxed mb-6">
                     Join our mission to plant 1 million trees and make the Earth greener for future generations.
                 </p>
-                <button class="bg-[#FACC15] text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">Get Involved</button>
+                <button class="bg-[#FACC15] text-green-900 px-4 py-2 rounded-full font-semibold hover:bg-yellow-500">Get
+                    Involved</button>
             </div>
 
             <div class="flex justify-center sm:justify-end">
                 <img src="assets/hero-leaf2.png" alt="hero-leaf2">
             </div>
 
+        </div>
+    </section>
+
+    <section class="w-full bg-[#F0FDF4] py-10">
+        <div class="mx-auto px-4 md:px-8">
+
+            <!-- Section Title -->
+            <h1 class="text-3xl font-bold text-[#1F2937] text-center mb-8">
+                Choose Your Trees
+            </h1>
+
+            <!-- Main Layout -->
+            <div class="grid grid-cols-1 lg:grid-cols-6 gap-4">
+
+                <!-- Categories Sidebar -->
+                <aside class="rounded-xl p-4 lg:col-span-1">
+                    <h3 class="text-xl font-semibold text-[#1F2937] mb-4">Categories</h3>
+                    <ul class="space-y-2">
+                        <li class="cursor-pointer px-3 py-2 rounded-md hover:bg-[#15803D] hover:text-[#FFFFFF]">Fruit
+                            Trees</li>
+                        <li class="cursor-pointer px-3 py-2 rounded-md hover:bg-[#15803D] hover:text-[#FFFFFF]">
+                            Flowering Trees</li>
+                        <li class="cursor-pointer px-3 py-2 rounded-md hover:bg-[#15803D] hover:text-[#FFFFFF]">Shade
+                            Trees</li>
+                    </ul>
+                </aside>
+
+                <!-- Tree Cards -->
+                <div class="lg:col-span-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <!-- Tree Card -->
+                    <div class="bg-white shadow-md rounded-xl p-4 flex flex-col">
+                        <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-40 object-cover rounded-lg mb-3">
+                        <h3 class="text-lg font-semibold text-gray-800">Mango Tree</h3>
+                        <p class="text-sm text-gray-600 mb-3">
+                            A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
+                            Its dense green leaves give excellent shade.
+                        </p>
+                        <div class="flex items-center justify-between mb-3">
+                            <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Fruit Tree</span>
+                            <span class="text-lg font-bold text-gray-900">৳500</span>
+                        </div>
+                        <button class="mt-auto bg-[#15803D] text-white py-2 px-4 rounded-lg hover:bg-green-700">
+                            Add to Cart
+                        </button>
+                    </div>
+
+                    <!-- Duplicate More Cards -->
+                    <div class="bg-white shadow-md rounded-xl p-4 flex flex-col">
+                        <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-40 object-cover rounded-lg mb-3">
+                        <h3 class="text-lg font-semibold text-gray-800">Mango Tree</h3>
+                        <p class="text-sm text-gray-600 mb-3">
+                            A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
+                            Its dense green leaves give excellent shade.
+                        </p>
+                        <div class="flex items-center justify-between mb-3">
+                            <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Fruit Tree</span>
+                            <span class="text-lg font-bold text-gray-900">৳500</span>
+                        </div>
+                        <button class="mt-auto bg-[#15803D] text-white py-2 px-4 rounded-lg hover:bg-green-700">
+                            Add to Cart
+                        </button>
+                    </div>
+
+                    <div class="bg-white shadow-md rounded-xl p-4 flex flex-col">
+                        <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-40 object-cover rounded-lg mb-3">
+                        <h3 class="text-lg font-semibold text-gray-800">Mango Tree</h3>
+                        <p class="text-sm text-gray-600 mb-3">
+                            A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
+                            Its dense green leaves give excellent shade.
+                        </p>
+                        <div class="flex items-center justify-between mb-3">
+                            <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Fruit Tree</span>
+                            <span class="text-lg font-bold text-gray-900">৳500</span>
+                        </div>
+                        <button class="mt-auto bg-[#15803D] text-white py-2 px-4 rounded-lg hover:bg-green-700">
+                            Add to Cart
+                        </button>
+                    </div>
+                    <div class="bg-white shadow-md rounded-xl p-4 flex flex-col">
+                        <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-40 object-cover rounded-lg mb-3">
+                        <h3 class="text-lg font-semibold text-gray-800">Mango Tree</h3>
+                        <p class="text-sm text-gray-600 mb-3">
+                            A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
+                            Its dense green leaves give excellent shade.
+                        </p>
+                        <div class="flex items-center justify-between mb-3">
+                            <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Fruit Tree</span>
+                            <span class="text-lg font-bold text-gray-900">৳500</span>
+                        </div>
+                        <button class="mt-auto bg-[#15803D] text-white py-2 px-4 rounded-lg hover:bg-green-700">
+                            Add to Cart
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Cart Sidebar -->
+                <aside class="bg-white shadow-md rounded-xl p-4 lg:col-span-1">
+                    <h2 class="text-xl font-semibold text-[#000000] mb-4">Your Cart</h2>
+
+                    <!-- Cart Item -->
+                    <div
+                        class="bg-surface shadow-md px-2 rounded-lg bg-[#F0FDF4] flex items-center justify-between pb-2 mb-2">
+                        <div>
+                            <span class="block font-medium text-[#1F2937]">Mango Tree</span>
+                            <span class="text-sm text-[#1F2937]">৳500 x 1</span>
+                        </div>
+                        <button class="text-red-500 hover:text-red-700">⨯</button>
+                    </div>
+                    <div
+                        class="bg-surface shadow-md px-2 rounded-lg bg-[#F0FDF4] flex items-center justify-between pb-2 mb-2">
+                        <div>
+                            <span class="block font-medium text-[#1F2937]">Mango Tree</span>
+                            <span class="text-sm text-[#1F2937]">৳500 x 1</span>
+                        </div>
+                        <button class="text-red-500 hover:text-red-700">⨯</button>
+                    </div>
+
+                    <!-- Checkout Button -->
+                    <div class="flex items-center justify-between border-b border-gray-200 pb-2 mb-2">
+                        <span class="block font-medium text-gray-800">Total</span>
+                        <span class="text-sm text-gray-600">৳1000</span>
+                    </div>
+                </aside>
+            </div>
         </div>
     </section>
 
