About the Campaign update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section class="w-full bg-[#F0FDF4] py-10">
+    <section class="w-full py-10">
         <div class="mx-auto px-4 md:px-8">
 
             <!-- Section Title -->
@@ -187,6 +187,52 @@
         </div>
     </section>
 
+    <section class="w-full bg-[#F0FDF4] py-12">
+        <div class="mx-auto px-4 md:px-8">
+
+            <!-- Section Title -->
+            <h1 class="text-3xl md:text-4xl font-bold text-[#1F2937] text-center mb-10">
+                About the Campaign
+            </h1>
+
+            <!-- Main Layout -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
+
+                <!-- Left Image -->
+                <div class="flex justify-center">
+                    <img src="assets/about.png" alt="about" class="rounded-xl shadow-lg w-full max-w-md">
+                </div>
+
+                <!-- Right Content -->
+                <div class="text-sm">
+                    <p class="text-gray-700 leading-relaxed mb-6">
+                        Green Earth is a global tree plantation
+                        initiative
+                        dedicated to fighting climate change. Since our start, we’ve planted over
+                        500,000 trees worldwide. By joining our campaign, you help
+                        restore forests,
+                        create habitats for wildlife, and combat global warming.
+                    </p>
+
+                    <!-- Bullet List -->
+                    <ul class="space-y-3">
+                        <li class="flex items-center gap-3">
+                            <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="text-gray-800">Restoration of natural habitats</span>
+                        </li>
+                        <li class="flex items-center gap-3">
+                            <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="text-gray-800">Improvement of air quality</span>
+                        </li>
+                        <li class="flex items-center gap-3">
+                             <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="text-gray-800">Support for local communities</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
