--- a/index.html
+++ b/index.html
@@ -187,34 +187,27 @@
         </div>
     </section>
 
-    <section class="w-full bg-[#F0FDF4] py-12">
+    <section class="w-full py-12">
         <div class="mx-auto px-4 md:px-8">
-
-            <!-- Section Title -->
             <h1 class="text-3xl md:text-4xl font-bold text-[#1F2937] text-center mb-10">
                 About the Campaign
             </h1>
+            <div class="grid grid-cols-6 items-center gap-6">
 
-            <!-- Main Layout -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
+                <div></div>
 
-                <!-- Left Image -->
-                <div class="flex justify-center">
+                <div class="col-span-2 flex justify-left">
                     <img src="assets/about.png" alt="about" class="rounded-xl shadow-lg w-full max-w-md">
                 </div>
 
-                <!-- Right Content -->
-                <div class="text-sm">
+                <div class="col-span-2 text-sm">
                     <p class="text-gray-700 leading-relaxed mb-6">
-                        Green Earth is a global tree plantation
-                        initiative
-                        dedicated to fighting climate change. Since our start, we’ve planted over
-                        500,000 trees worldwide. By joining our campaign, you help
-                        restore forests,
-                        create habitats for wildlife, and combat global warming.
+                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since
+                        our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                        forests, create habitats for wildlife, and combat global warming.
                     </p>
 
-                    <!-- Bullet List -->
+                   
                     <ul class="space-y-3">
                         <li class="flex items-center gap-3">
                             <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
@@ -225,14 +218,18 @@
                             <span class="text-gray-800">Improvement of air quality</span>
                         </li>
                         <li class="flex items-center gap-3">
-                             <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
                             <span class="text-gray-800">Support for local communities</span>
                         </li>
                     </ul>
                 </div>
+
+                <div></div>
+
             </div>
         </div>
     </section>
+
 
 
 
