Our Impact update

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </section>
 
-    <section class="w-full py-12">
+    <section class="w-full py-10">
         <div class="mx-auto px-4 md:px-8">
             <h1 class="text-3xl md:text-4xl font-bold text-[#1F2937] text-center mb-10">
                 About the Campaign
@@ -207,7 +207,7 @@
                         forests, create habitats for wildlife, and combat global warming.
                     </p>
 
-                   
+
                     <ul class="space-y-3">
                         <li class="flex items-center gap-3">
                             <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
@@ -230,6 +230,27 @@
         </div>
     </section>
 
+    <section class="bg-[#CFF0DC] py-10">
+        <div class="mx-auto px-4 md:px-8">
+            <h1 class="text-3xl md:text-4xl font-bold text-[#1F2937] text-center mb-12">
+                Our Impact
+            </h1>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-[#FFFFFF] shadow-md rounded-xl p-7 flex flex-col items-center">
+                    <span class="text-4xl font-semibold text-[#1F2937]">500K+</span>
+                    <p class="text-lg text-[#4B5563]">Trees Planted</p>
+                </div>
+                <div class="bg-[#FFFFFF] shadow-md rounded-xl p-7 flex flex-col items-center">
+                    <span class="text-4xl font-semibold text-[#1F2937]">500K+</span>
+                    <p class="text-lg text-[#4B5563]">Trees Planted</p>
+                </div>
+                <div class="bg-[#FFFFFF] shadow-md rounded-xl p-7 flex flex-col items-center">
+                    <span class="text-4xl font-semibold text-[#1F2937]">500K+</span>
+                    <p class="text-lg text-[#4B5563]">Trees Planted</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
