Plant a Tree Today update

--- a/index.html
+++ b/index.html
@@ -252,6 +252,39 @@
         </div>
     </section>
 
+    <section class="bg-[#166534] py-12">
+        <div class="max-w-3xl mx-auto px-4 md:px-8">
+
+            <h1 class="text-3xl md:text-4xl font-bold text-white text-center mb-10">
+                Plant a Tree Today
+            </h1>
+
+            <div class="bg-[#15803D] rounded-xl shadow-lg p-8">
+                <div class="space-y-5">
+
+                    <input type="text" placeholder="Your Name"
+                        class="w-full px-4 py-3 rounded-lg bg-white border border-gray-300 focus:ring-2 focus:ring-green-600 focus:outline-none" />
+
+                    <input type="email" placeholder="Your Email Address"
+                        class="w-full px-4 py-3 rounded-lg bg-white border border-gray-300 focus:ring-2 focus:ring-green-600 focus:outline-none" />
+
+                    <select
+                        class="w-full px-4 py-3 rounded-lg border border-gray-300 bg-white focus:ring-2 focus:ring-green-600 focus:outline-none">
+                        <option selected>Number of Trees</option>
+                        <option>Good</option>
+                        <option>Better</option>
+                        <option>Best</option>
+                    </select>
+                    
+                    <button
+                        class="w-full bg-yellow-400 text-green-900 font-semibold py-3 rounded-lg hover:bg-yellow-500 transition">
+                        Donate Now
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
