--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <option>Better</option>
                         <option>Best</option>
                     </select>
-                    
+
                     <button
                         class="w-full bg-yellow-400 text-green-900 font-semibold py-3 rounded-lg hover:bg-yellow-500 transition">
                         Donate Now
@@ -285,7 +285,9 @@
         </div>
     </section>
 
-
+<footer class="bg-[#14532D] p-3 text-center text-[#FFFFFF]">
+    <p>© 2025 Green Earth. All Rights Reserved.</p>
+</footer>
 
 
 </body>
