--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                     <!-- Tree Card -->
                     <div class="bg-white shadow-md rounded-xl p-4 flex flex-col">
                         <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-40 object-cover rounded-lg mb-3">
-                        <h3 class="text-lg font-semibold text-gray-800" onclick="openModal()">Mango Tree</h3>
+                        <h3 class="text-lg font-semibold text-gray-800" command="show-modal" commandfor="dialog">Mango
+                            Tree</h3>
                         <p class="text-sm text-gray-600 mb-3">
                             A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
                             Its dense green leaves give excellent shade.
@@ -102,7 +103,8 @@
                                 class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Fruit Tree</span>
                             <span class="text-lg font-bold text-gray-900">৳500</span>
                         </div>
-                        <button class="mt-auto bg-[#166534] text-white py-2 px-4 rounded-lg hover:bg-green-700">
+                        <button command="show-modal" commandfor="dialog"
+                            class="mt-auto bg-[#166534] text-white py-2 px-4 rounded-lg hover:bg-green-700">
                             Add to Cart
                         </button>
                     </div>
@@ -110,7 +112,8 @@
                     <!-- Duplicate More Cards -->
                     <div class="bg-white shadow-md rounded-xl p-4 flex flex-col">
                         <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-40 object-cover rounded-lg mb-3">
-                        <h3 class="text-lg font-semibold text-gray-800" onclick="openModal()">Mango Tree</h3>
+                        <h3 class="text-lg font-semibold text-gray-800" command="show-modal" commandfor="dialog">Mango
+                            Tree</h3>
                         <p class="text-sm text-gray-600 mb-3">
                             A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
                             Its dense green leaves give excellent shade.
@@ -291,31 +294,46 @@
     </footer>
 
 
-    <div id="treeModal" class="fixed inset-0 hidden flex items-center justify-center z-50">
-        <div class="bg-white rounded-xl shadow-lg max-w-md w-full p-6 relative">
 
-            <h2 class="text-xl font-bold text-gray-800 mb-4">Mango Tree</h2>
+  
+    <el-dialog>
+        <dialog id="dialog" aria-labelledby="dialog-title"
+            class="fixed inset-0 size-auto max-h-none max-w-none overflow-y-auto bg-transparent backdrop:bg-transparent">
+            <el-dialog-backdrop
+                class="fixed inset-0 bg-gray-500/75 transition-opacity data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in"></el-dialog-backdrop>
 
-            <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-52 object-cover rounded-lg mb-4">
+            <div tabindex="0"
+                class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
+                <el-dialog-panel
+                    class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
+                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
 
-            <p class="text-sm text-gray-700 mb-2">
-                <span class="font-semibold">Category:</span> Fruit Tree
-            </p>
-            <p class="text-sm text-gray-700 mb-2">
-                <span class="font-semibold">Price:</span> ৳500
-            </p>
-            <p class="text-sm text-gray-700">
-                <span class="font-semibold">Description:</span>
-                A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
-                Its dense green leaves give excellent shade.
-            </p>
-            <div class="mt-6 text-right">
-                <button onclick="closeModal()" class="px-4 py-2 bg-gray-200 text-gray-700 rounded-lg hover:bg-gray-300">
-                    Close
-                </button>
+                        <h2 class="text-xl font-bold text-gray-800 mb-4">Mango Tree</h2>
+
+                        <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-52 object-cover rounded-lg mb-4">
+
+                        <p class="text-sm text-gray-700 mb-2">
+                            <span class="font-semibold">Category:</span> Fruit Tree
+                        </p>
+                        <p class="text-sm text-gray-700 mb-2">
+                            <span class="font-semibold">Price:</span> ৳500
+                        </p>
+                        <p class="text-sm text-gray-700">
+                            <span class="font-semibold">Description:</span>
+                            A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
+                            Its dense green leaves give excellent shade.
+                        </p>
+
+                    </div>
+                    <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+                        <button type="button" command="close" commandfor="dialog"
+                        class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs inset-ring inset-ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button>
+                    </div>
+                </el-dialog-panel>
             </div>
-        </div>
-    </div>
+        </dialog>
+    </el-dialog>
+
 
 
 </body>
