update modal data load by api

--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                 class="flex min-h-full items-end justify-center p-4 text-center focus:outline-none sm:items-center sm:p-0">
                 <el-dialog-panel
                     class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all data-closed:translate-y-4 data-closed:opacity-0 data-enter:duration-300 data-enter:ease-out data-leave:duration-200 data-leave:ease-in sm:my-8 sm:w-full sm:max-w-lg data-closed:sm:translate-y-0 data-closed:sm:scale-95">
-                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div id="itemdetailsmodal" class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
 
-                        <h2 class="text-xl font-bold text-gray-800 mb-4">Mango Tree</h2>
+                        <!-- <h2 class="text-xl font-bold text-gray-800 mb-4">Mango Tree</h2>
 
                         <img src="assets/mango.jpg" alt="Mango Tree" class="w-full h-52 object-cover rounded-lg mb-4">
 
@@ -250,7 +250,7 @@
                             <span class="font-semibold">Description:</span>
                             A fast-growing tropical tree that produces delicious, juicy mangoes during summer.
                             Its dense green leaves give excellent shade.
-                        </p>
+                        </p> -->
 
                     </div>
                     <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
