--- a/index.html
+++ b/index.html
@@ -63,13 +63,25 @@
         </div>
     </section>
 
+
+
+
     <section class="w-full py-10">
+        <div id="loader" class="flex justify-center p-2 hidden">
+            <div
+                class="inline-block size-10 animate-spin rounded-full border-4 border-current border-t-transparent text-green-600">
+            </div>
+        </div>
+
         <div class="mx-auto px-4 md:px-8">
 
 
             <h1 class="text-3xl font-bold text-[#1F2937] text-center mb-8">
                 Choose Your Trees
             </h1>
+
+
+
 
             <div class="grid grid-cols-1 lg:grid-cols-6 gap-4">
 
