--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
                     <p class="text-lg text-[#4B5563]">Trees Planted</p>
                 </div>
                 <div class="bg-[#FFFFFF] shadow-md rounded-xl p-7 flex flex-col items-center">
-                    <span class="text-4xl font-semibold text-[#1F2937]">500K+</span>
-                    <p class="text-lg text-[#4B5563]">Trees Planted</p>
+                    <span class="text-4xl font-semibold text-[#1F2937]">120+</span>
+                    <p class="text-lg text-[#4B5563]">Communities Involved</p>
                 </div>
                 <div class="bg-[#FFFFFF] shadow-md rounded-xl p-7 flex flex-col items-center">
-                    <span class="text-4xl font-semibold text-[#1F2937]">500K+</span>
-                    <p class="text-lg text-[#4B5563]">Trees Planted</p>
+                    <span class="text-4xl font-semibold text-[#1F2937]">30+</span>
+                    <p class="text-lg text-[#4B5563]">Countries Reached</p>
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
                 Plant a Tree Today
             </h1>
 
-            <div class="bg-[#166534] rounded-xl shadow-lg p-8">
+            <div class="bg-[#15803D] rounded-xl shadow-lg p-8">
                 <div class="space-y-5">
 
                     <input type="text" placeholder="Your Name"
@@ -199,9 +199,9 @@
                     <select
                         class="w-full px-4 py-3 rounded-lg border border-gray-300 bg-white focus:ring-2 focus:ring-green-600 focus:outline-none">
                         <option selected>Number of Trees</option>
-                        <option>Good</option>
-                        <option>Better</option>
-                        <option>Best</option>
+                        <option>100</option>
+                        <option>200</option>
+                        <option>300</option>
                     </select>
 
                     <button
