--- a/index.html
+++ b/index.html
@@ -120,43 +120,43 @@
             <h1 class="text-3xl md:text-4xl font-bold text-[#1F2937] text-center mb-10">
                 About the Campaign
             </h1>
-            <div class="grid grid-cols-6 items-center gap-6">
 
-                <div></div>
+            <!-- Mobile: 1 column | Desktop: 6 columns -->
+            <div class="grid grid-cols-1 md:grid-cols-6 items-center gap-6">
 
-                <div class="col-span-2 flex justify-left">
+                <!-- Image -->
+                <div class="flex justify-center md:col-span-2 md:col-start-2 order-1 md:order-1">
                     <img src="assets/about.png" alt="about" class="rounded-xl shadow-lg w-full max-w-md">
                 </div>
 
-                <div class="col-span-2 text-sm">
+                <!-- Text -->
+                <div class="text-sm order-2 md:col-span-2 md:order-2">
                     <p class="text-gray-700 leading-relaxed mb-6">
-                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since
-                        our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
-                        forests, create habitats for wildlife, and combat global warming.
+                        Green Earth is a global tree plantation initiative dedicated to fighting climate change.
+                        Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign,
+                        you help restore forests, create habitats for wildlife, and combat global warming.
                     </p>
-
 
                     <ul class="space-y-3">
                         <li class="flex items-center gap-3">
-                            <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="w-2 h-2 rounded-full bg-[#1F2937]"></span>
                             <span class="text-gray-800">Restoration of natural habitats</span>
                         </li>
                         <li class="flex items-center gap-3">
-                            <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="w-2 h-2 rounded-full bg-[#1F2937]"></span>
                             <span class="text-gray-800">Improvement of air quality</span>
                         </li>
                         <li class="flex items-center gap-3">
-                            <span class="w-2 h-2 flex items-center justify-center rounded-full bg-[#1F2937]"></span>
+                            <span class="w-2 h-2 rounded-full bg-[#1F2937]"></span>
                             <span class="text-gray-800">Support for local communities</span>
                         </li>
                     </ul>
                 </div>
 
-                <div></div>
-
             </div>
         </div>
     </section>
+
 
     <section class="bg-[#CFF0DC] py-10">
         <div class="mx-auto px-4 md:px-8">
