--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                     <select
                         class="w-full px-4 py-3 rounded-lg border border-gray-300 bg-white focus:ring-2 focus:ring-green-600 focus:outline-none">
                         <option selected>Number of Trees</option>
-                        <option>100</option>
-                        <option>200</option>
-                        <option>300</option>
+                        <option>1 Tree -$5</option>
+                        <option>2 Tree - $25</option>
+                        <option>10 Tree $50</option>
                     </select>
 
                     <button
