--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
 
-            <div class="grid grid-cols-1 lg:grid-cols-6 gap-4">
+            <div class="grid grid-cols-1 lg:grid-cols-6 gap-4 items-start">
 
                 <!-- catagory design -->
 
@@ -100,7 +100,7 @@
                 </div>
 
                 <!-- cart list -->
-                <aside class="bg-white shadow-md rounded-xl p-4 lg:col-span-1">
+                <aside class="bg-white shadow-md rounded-xl p-4 lg:col-span-1 min-h-[400px]">
                     <h2 class="text-xl font-semibold text-[#000000] mb-4">Your Cart</h2>
 
                     <div id="cartList">
